# radare2-rlang

./: .gitignore  Makefile  README.md  config.mk.acr  configure  configure.acr  duktape.c  install.mk  python.c  radare.py
.github/workflows/: c-cpp.yml  release.yml
csharp/: build.mk
duktape/: Makefile  build.mk  duktape.c
duktape/examples/: dukasm.js
go/: Makefile  radare2.yml
guile/: Makefile  hello.scm  plugin.c
lua/: README.md  build.mk  hello.lua  lua.c  r2api.lua
lua/examples/: r2api.lua  test.lua
lua/lib/: Makefile  inspect.lua  inspect.lua.c  json.lua  json.lua.c  r2api.lua  r2api.lua.c
mujs/: build.mk  example.mujs  jsapi.c  plugin.c
perl/: build.mk  perl.c
python/: Makefile  anal.c  asm.c  asm.h  build.mk  python-config-wrapper  python.c
python/examples/: test-py-anal.py  test-py-arch.py  test-py-core.py  test-py-io.py  test-py-io2.py  test-pyfile-io.py
python/python/: anal.c  arch.c  arch.h  asm.c  asm.h  bin.c  common.c  common.h  core.c  core.h  io.c
python/stubs/: pyproject.toml  radare_stubs.py
quickjs/: Makefile  build.mk  hello.qjs  qjs.c  quickjs.c  world.qjs
quickjs/examples/: console.qjs  hello.qjs  world.qjs
ruby/: build.mk  mkruby.rb  ruby.c
tcc/: build.mk  tcc.c
tcl/: Makefile  README.md  hello.tcl  json.tcl  plugin.c  test-tcl-core.tcl  tkhello.tcl  tktest.tcl
tiny/: Makefile  hello.tiny  lang_tiny.c
typescript/: README.md
typescript/mujs/: Makefile
vlang/: Makefile  README.md  build.mk  example.v  v.c
wren/: Makefile  wren.mk
wren/p/: wren.c  (+2 more)
zforth/: Makefile  README.md  core.zf  test.zf  zforth.c
(+31 files in other folders)
